src/test/deca/context/invalid/langage_sans_objet/troisieme_passe/regle_3_17_2.deca
// Description:
//    regle 3.17 type = void
//
// Resultats:
//    Ligne 7: Variable type cannot be void.
{
    void a;
}
// raison : type = void
// z